--- a/client/stylesheets/_variables.scss
+++ b/client/stylesheets/_variables.scss
@@ -5,7 +5,7 @@ $light-brown:     #CFB9B2;
 $grey:            #777;
 $light-grey:      #ddd;
 
-$blue:            #288FB4;
+$blue:            #77abda;
 $dark-blue:       #1D556F;
 $beige:           #EFDDB2;
 $red:             #e86554;
