--- a/client/stylesheets/_home.scss
+++ b/client/stylesheets/_home.scss
@@ -5,29 +5,30 @@
 }
 
 .home-page {
-  padding-top: 200px;
+  padding-top: 50px;
   text-align: center !important;
   height: 100% !important; 
   background: url("/images/home.png")  no-repeat center center fixed;
   background-size: cover;
   color: white;
 
-  .container {
-    max-width: 600px;
+  .welcome {
+    padding: 20px;
+    background: $blue;
+    opacity: 0.9;
   }
 
   h1, p {
     color: white;
-    text-shadow: 0 0 10px $dark-brown;
   }
 
   p {
-    font-size: 3rem;
+    font-size: 1.5rem;
   }
 
   h1 {
     margin: 0 0 40px 0;
-    font-size: 4rem;
+    font-size: 2.5rem;
   }
 
   a.btn.btn-primary.btn-lg {
@@ -38,3 +39,18 @@
   }
 }
 
+
+.btn-hunt {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  padding: 12px 30px;
+  background: $dark-blue;
+  color:      white;
+  font-size: 1.75rem;
+
+  &:hover {
+    color: white;
+    background: lighten($dark-blue, 7%);
+  }
+}
